Fixed error with mistakes not showing when resetting

--- a/Sudoku/public/style.css
+++ b/Sudoku/public/style.css
@@ -3,6 +3,8 @@ body{
     background-color:#fcfcfc;
 }
 
+
+/* Grid */
 table{
     height: 70vh;
     width:100%;
@@ -37,6 +39,19 @@ input[type=number]{
 
 }
 
+/* Removes arrows from inputs*/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 
 .hover input[type=number], .hover{
     background-color:#DDDDDD;
@@ -66,7 +81,12 @@ input[type=number]{
     border-left:solid;
 }
 
+.cell{
+    position: relative;
+}
 
+
+/*Options */
 .options{
     position:absolute;
     width:40%;
@@ -106,6 +126,13 @@ input[type=number]{
     opacity: 1;
 }
 
+.optionHidden{
+    display:none;
+}
+
+
+
+/*Buttons*/
 .hiddenBtn{
     display:none;
 }
@@ -154,98 +181,30 @@ input[type=number]{
     border: 4px solid #ebebeb !important;
 }
 
-
-.optionHidden{
-    display:none;
-}
-
-
-
-
-
-
-.cell{
-    position: relative;
-}
-
-
-.mistakes, .mistakes input[type=number]{
-    background-color:#FF7E7E;
-}
-
-
-
-
-
-/* Removes arrows from inputs*/
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-
-.vr {
-    height:50px;
-}
-
-.navBtn{
-    border: none;
-    font-size:150%;
-    width:50%;
-    background-color:#B7F3F9;
-    font-family: "Noticia Text";
-}
-
-.navBtn:hover{
-    border: none;
-    width:50%;
-    background-color: white;
-    color: black;
-}
-
-.navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:#B7F3F9;
-    padding:10px;
-
-}
-
-
-.cont{
-  display: flex;
-  justify-content: center;
-}
-
-
-#startBtn{
-  background-color: white;
-  color: black;
-  border: 4px solid #d2f7dc; /* Green */
-  width:100%;
-  padding:30px;
-  border-radius: 8px;
-}
-
-#startBtn:hover{
-    background-color:#d2f7dc;
-    width:100%;
-    padding:30px;
-    border-radius: 8px;
-}
-
 #arrowBtn{
     height:100%;
 }
 
+@media only screen and (max-device-width: 900px){
+  #undoBtn{
+        width:200%;
+        margin-right:40px;
+  }
+
+  #redoBtn{
+        width:200%;
+  }
+
+  #hintBtn{
+        width:200%;
+  }
+
+}
+
+
+
+
+/*Modal*/
 .modalText{
     font-size:30px;
 }
@@ -306,28 +265,43 @@ input[type=number] {
     border: 4px solid #FFBF7E;
 }
 
-#sudokuTitle{
-    padding:10px
+
+
+
+
+
+
+/*Navbar*/
+
+.navbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#B7F3F9;
+    padding:10px;
+
+}
+
+.navBtn{
+    border: none;
+    font-size:150%;
+    width:50%;
+    background-color:#B7F3F9;
+    font-family: "Noticia Text";
+}
+
+.navBtn:hover{
+    border: none;
+    width:50%;
+    background-color: white;
+    color: black;
 }
 
 
-@media only screen and (max-device-width: 900px){
-  #undoBtn{
-        width:200%;
-        margin-right:40px;
-  }
-
-  #redoBtn{
-        width:200%;
-  }
-
-  #hintBtn{
-        width:200%;
-  }
-
-
-
+.vr {
+    height:50px;
 }
+
 
 @media only screen and (max-device-width: 1000px){
     .vr{
@@ -343,6 +317,46 @@ input[type=number] {
     .vr{
             margin-left:20px;
       }
+}
+
+#sudokuTitle{
+   padding:10px
+}
+
+#startBtn{
+  background-color: white;
+  color: black;
+  border: 4px solid #d2f7dc; /* Green */
+  width:100%;
+  padding:30px;
+  border-radius: 8px;
+}
+
+#startBtn:hover{
+    background-color:#d2f7dc;
+    width:100%;
+    padding:30px;
+    border-radius: 8px;
+}
+
+
+
+
+
+.cont{
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.mistakes, .mistakes input[type=number]{
+    background-color:#FF7E7E;
+}
+
+
+.mistakes.selected, .mistakes.selected  input[type=number]{
+    background-color:#bd6262;
 }
 
 
